About Page Bug Fixed
- Horizontal scrolling for mobile devices fixed
- 1 Comment added for horizontal scrolling blocker

--- a/about/about-styles.css
+++ b/about/about-styles.css
@@ -1,3 +1,8 @@
+/* Styles to prevent horizontal scrolling */
+html {
+  overflow-x: hidden;
+}
+
 /* Styles to keep all the elemenets aligned correctly */
 .about-container {
     display: flex;
